@@ -1,5 +1,6 @@
 LITT Changelog:
 ===============
+ * 2019-09-17: Added "add-l" action. Simplified executeSimpleAddAction and executeInsert.
  * 2019-09-17: Further simplified selectRowValues and dependent functions.
  * 2019-09-16: Added series virtual columns "sg" and "spg", renamed "sep" to "sp".
  * 2019-09-16: Renamed window function columns to be less collision-prone with normal columns.
